[gd_scene load_steps=2 format=3 uid="uid://bsm8o54slysi7"]

[ext_resource type="Script" uid="uid://5o2milmhx06u" path="res://MainMenu.gd" id="1_06t4h"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_06t4h")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="Panel"]
layout_mode = 2
anchors_preset = 0
anchor_right = 0.227
anchor_bottom = 0.125
offset_top = 81.0
offset_right = -0.504028
offset_bottom = 81.0
grow_horizontal = 2
grow_vertical = 2

[node name="BoxContainer" type="BoxContainer" parent="Panel/Control"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.209877
anchor_right = 0.647897
anchor_bottom = 1.90123
offset_left = 27.0
offset_top = -81.0
offset_right = -0.101021
offset_bottom = -3.99999
grow_vertical = 2
vertical = true
metadata/_edit_use_anchors_ = true

[node name="StartGame" type="Button" parent="Panel/Control/BoxContainer"]
layout_mode = 2
text = "Start"

[node name="HostGame" type="Button" parent="Panel/Control/BoxContainer"]
layout_mode = 2
text = "Host"

[node name="IPAddress" type="LineEdit" parent="Panel/Control/BoxContainer"]
layout_mode = 2

[node name="JoinGame" type="Button" parent="Panel/Control/BoxContainer"]
layout_mode = 2
text = "Join"

[node name="ExitGame" type="Button" parent="Panel/Control/BoxContainer"]
layout_mode = 2
text = "Exit"
